[gd_scene load_steps=17 format=3 uid="uid://buu0llfaduhea"]

[ext_resource type="Theme" uid="uid://c4tnmjnv1swxg" path="res://resources/ui/main_theme.tres" id="1_l63hr"]
[ext_resource type="Script" uid="uid://c445ke2nmxwej" path="res://scenes/components/pause_controller.gd" id="2_wdnx1"]
[ext_resource type="Theme" uid="uid://7vvxi1od5y83" path="res://resources/ui/button.tres" id="3_dc6cb"]
[ext_resource type="PackedScene" uid="uid://dxlupbpywxun7" path="res://scenes/menu/settings.tscn" id="4_s8h8j"]
[ext_resource type="AudioStream" uid="uid://45seydecif80" path="res://assets/sounds/shapeforms/WHOOSH_AIRY_FLUTTER_01.wav" id="5_n2a8l"]
[ext_resource type="AudioStream" uid="uid://bksx4qer1bjb6" path="res://assets/sounds/shapeforms/Tablet_Tap_07.wav" id="6_krhho"]
[ext_resource type="AudioStream" uid="uid://dcj5q48alcc57" path="res://assets/sounds/kenney/click2.ogg" id="7_stxwk"]
[ext_resource type="AudioStream" uid="uid://ccl48un6bn75c" path="res://assets/sounds/shapeforms/PC Keyboard_Keystroke_28.wav" id="8_wap4a"]
[ext_resource type="AudioStream" uid="uid://bypm53seyi7wx" path="res://assets/sounds/shapeforms/BUTTON_05.wav" id="9_q6g33"]
[ext_resource type="Texture2D" uid="uid://beliqhf7ugdn" path="res://assets/textures/powerscroll.png" id="10_wdnx1"]
[ext_resource type="Texture2D" uid="uid://dokfsvswohlm6" path="res://assets/textures/meow.png" id="11_dc6cb"]

[sub_resource type="Animation" id="Animation_r8yej"]
length = 0.001
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CURRENT:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("NEXT:position:x")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("NEXT:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("CURRENT:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_y1o0p"]
resource_name = "next"
length = 0.5
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CURRENT:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(0, 0, 0, 0.2, -100, -200, -0.3, -44, 0, 0),
"times": PackedFloat32Array(0, 0.5)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("NEXT:position:x")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(200, 0, 0, 0.2, -100, 0, -0.3, -44, 0, 0),
"times": PackedFloat32Array(0, 0.5)
}

[sub_resource type="Animation" id="Animation_3y2rt"]
resource_name = "swap"
length = 0.5
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CURRENT:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(0, 0, 0, 0.2, 100, -200, -0.3, 44, 0, 0),
"times": PackedFloat32Array(0, 0.5)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("NEXT:position:x")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(-200, 0, 0, 0.2, 100, 0, -0.3, 44, 0, 0),
"times": PackedFloat32Array(0, 0.5)
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("NEXT:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.16666667, 0.36666667),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0.1, 0.1, 0.1, 1), Color(1, 1, 1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("CURRENT:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.19999999),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(0.1, 0.1, 0.1, 1)]
}
tracks/4/type = "method"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath(".")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0.5),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"detach"
}]
}

[sub_resource type="Animation" id="Animation_1xtef"]
resource_name = "swap_alpha"
length = 0.5
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CURRENT:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(0, 0, 0, 0.2, 100, -200, -0.3, 44, 0, 0),
"times": PackedFloat32Array(0, 0.5)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("NEXT:position:x")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(-200, 0, 0, 0.2, 100, 0, -0.3, 44, 0, 0),
"times": PackedFloat32Array(0, 0.5)
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("NEXT:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.16666667, 0.36666667),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("CURRENT:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.19999999),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/4/type = "method"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath(".")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0.5),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"detach"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_r8yej"]
_data = {
&"RESET": SubResource("Animation_r8yej"),
&"next": SubResource("Animation_y1o0p"),
&"swap": SubResource("Animation_3y2rt"),
&"swap_alpha": SubResource("Animation_1xtef")
}

[node name="Pause" type="Control" node_paths=PackedStringArray("main_screen", "settings_screen", "current_root", "next_root", "player")]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -600.0
offset_bottom = -450.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(4, 4)
theme = ExtResource("1_l63hr")
script = ExtResource("2_wdnx1")
main_screen = NodePath("Main")
settings_screen = NodePath("Settings")
current_root = NodePath("CURRENT")
next_root = NodePath("NEXT")
player = NodePath("SwapPlayer")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.5294118)

[node name="Main" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Main"]
layout_mode = 1
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -34.0
offset_right = 34.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 2
alignment = 1

[node name="RichTextLabel" type="RichTextLabel" parent="Main/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
theme_override_colors/font_shadow_color = Color(0.1148968, 0.11489681, 0.1148968, 1)
theme_override_constants/shadow_outline_size = 0
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 2
bbcode_enabled = true
text = "[wave amp=30.0 freq=5.0][rainbow freq=0.25]ПАУЗА"
fit_content = true
scroll_active = false
autowrap_trim_flags = 0
horizontal_alignment = 1
vertical_alignment = 1

[node name="Control" type="Control" parent="Main/VBoxContainer"]
custom_minimum_size = Vector2(0, 5)
layout_mode = 2

[node name="continue" type="Button" parent="Main/VBoxContainer" groups=["ui_button"]]
layout_mode = 2
mouse_default_cursor_shape = 2
theme = ExtResource("3_dc6cb")
text = "продолжить"

[node name="settings" type="Button" parent="Main/VBoxContainer" groups=["ui_button"]]
layout_mode = 2
mouse_default_cursor_shape = 2
theme = ExtResource("3_dc6cb")
text = "настройки"

[node name="exit" type="Button" parent="Main/VBoxContainer" groups=["ui_button"]]
layout_mode = 2
mouse_default_cursor_shape = 2
theme = ExtResource("3_dc6cb")
text = "выйти"

[node name="Label" type="Label" parent="Main/VBoxContainer"]
layout_mode = 2

[node name="Powerscroll" type="Sprite2D" parent="Main"]
position = Vector2(169, 33)
texture = ExtResource("10_wdnx1")
hframes = 2
frame = 1

[node name="Meow" type="Sprite2D" parent="Main"]
position = Vector2(33.5, 25.5)
texture = ExtResource("11_dc6cb")

[node name="Settings" parent="." instance=ExtResource("4_s8h8j")]
visible = false
layout_mode = 1
offset_right = 0.0
offset_bottom = 0.0

[node name="SwapPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_r8yej")
}

[node name="CURRENT" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -6.1035156e-05
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="NEXT" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Sounds" type="Node" parent="."]

[node name="Swap" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource("5_n2a8l")
volume_db = -28.363
mix_target = 2
bus = &"UI"

[node name="Hover" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource("6_krhho")
volume_db = -11.886
bus = &"UI"

[node name="Unhover" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource("7_stxwk")
volume_db = -24.477
bus = &"UI"

[node name="Pressed" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource("8_wap4a")
volume_db = -31.335
pitch_scale = 1.38
bus = &"UI"

[node name="Released" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource("9_q6g33")
volume_db = -37.278
pitch_scale = 1.27
bus = &"UI"

[connection signal="pressed" from="Main/VBoxContainer/continue" to="." method="_on_continue_pressed"]
[connection signal="pressed" from="Main/VBoxContainer/settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="Main/VBoxContainer/exit" to="." method="_on_exit_pressed"]
[connection signal="pressed" from="Settings/RichTextLabel/CenterContainer/exit" to="." method="back"]

[editable path="Settings"]
